[Grid] correctly displayed on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 100%;
+  height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   color: var(--color-text);
